Handled exception thrown by Attach API when running on JDK 9 without the use of "-Djdk.attach.allowAttachSelf", in order to show a more helpful error message; closes #418.